@@ -1,3 +1,8 @@
+2002-02-15  Per Bothner  <per@bothner.com>
+
+	* Makefile.am (java_sources):  Leave out CallContext.java.
+	(EXTRA_DIST):  Leave out $(java_sources), but add $(java_BUILT).
+
 2002-02-14  Per Bothner  <per@bothner.com>
 
 	* CallContext.java.in (getOnlyInstance, setInstance):  New methods.
